--- a/FriendsWebsite/style.css
+++ b/FriendsWebsite/style.css
@@ -1,11 +1,24 @@
 body {
-  font-family: 'Courier New', Courier, monospace;
+  /*font-family: 'Courier New', Courier, monospace;*/
+  font-family: 'Yu Gothic', Courier, monospace;
+  font-weight:bold;
+  color:black;
+  background-color:white;
+  background-color:#ffc5e0;
+  
 }
+
+.image-box{
+	display: flex;
+	justify-content: center;
+}
+
 .logo{
-  width:300px;
-  margin-left:auto;
-  margin-right:auto;
-  display:block;
+  width:380px;
+}
+
+.cake{
+  width:550px;
 }
 
 ul {
@@ -19,18 +32,36 @@ ul {
 }
 
 li{
+  flex-shrink: 0;
 	padding: 8px;
+  margin: 0px;
+  margin-top:10px;
 }
 
 a {
+  
   font-size: 22px;
   display: block;
   text-align: center;
-  background: white;
   padding: 8px;
+  color:black;
   /* this removes the line under the links */
   text-decoration: none;
-  color:darkslategray;
+  /*background-color:#ffc5e0*/
+
+}
+
+
+
+.title{
+  padding:0px;
+  text-align: center;
+  max-width:700px;
+  font-size: 65px;
+  margin-left:auto;
+  margin-right:auto;
+  margin-top:20px;
+  margin-bottom:50px;
 }
 /*img {
   width: 100px;
