--- a/FriendsWebsite/style.css
+++ b/FriendsWebsite/style.css
@@ -1,10 +1,10 @@
 body {
   /*font-family: 'Courier New', Courier, monospace;*/
   font-family: 'Yu Gothic', Courier, monospace;
-  font-weight:bold;
+  font-weight:bolder;
   color:black;
   background-color:white;
-  background-color:#ffc5e0;
+  /*background-color:#ffc5e0;*/
   
 }
 
@@ -40,7 +40,7 @@ li{
 
 a {
   
-  font-size: 22px;
+  font-size: 24px;
   display: block;
   text-align: center;
   padding: 8px;
@@ -53,7 +53,7 @@ a {
 
 
 
-.title{
+.h1{
   padding:0px;
   text-align: center;
   max-width:700px;
@@ -61,7 +61,18 @@ a {
   margin-left:auto;
   margin-right:auto;
   margin-top:20px;
-  margin-bottom:50px;
+  margin-bottom:40px;
+}
+
+.h2{
+  padding:0px;
+  text-align: center;
+  max-width:700px;
+  font-size: 35px;
+  margin-left:auto;
+  margin-right:auto;
+  margin-top:0px;
+  margin-bottom:20px;
 }
 /*img {
   width: 100px;
@@ -95,7 +106,7 @@ a {
 .text{
   text-align:center;
 }*/
-/* do not edit this footer 
+/*
 .footer {
   position: fixed;
   bottom: 0;
